--- a/director.html
+++ b/director.html
@@ -74,6 +74,9 @@
 				<div class="item-control">
 					<label for="command">My Icon:</label><input id="hide_my_icon" type="button" value="Hide">
 				</div>
+				<div class="item-control">
+					<input id="reboot" type="button" value="Restart Data Server">
+				</div>
 			</div>
 		</div>
 		<div id="text_input" style="display:none">
