--- a/director.html
+++ b/director.html
@@ -105,7 +105,7 @@
 	</div>
 	<div id="map"></div>
 </article>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD771wv0bZmSuvvpH8dpBQq1C5kQIKWYag"></script>
 <script type="text/javascript" src="director.js"></script>
 <script type="text/javascript">
