My location button

--- a/director.html
+++ b/director.html
@@ -41,6 +41,9 @@
 		<div id="user_panel"  style="display:none">
 			<div class="room_chat">
 				<div class="item-control">
+					<label id="my_loc">Show My Location</label>
+				</div>
+				<div class="item-control">
 					<label id="user_name">Username: </label>
 				</div>
 				<div class="item-control">
