My location button

--- a/director.html
+++ b/director.html
@@ -41,7 +41,7 @@
 		<div id="user_panel"  style="display:none">
 			<div class="room_chat">
 				<div class="item-control">
-					<button id="my_loc">Show My Location</button>
+					<input id="my_loc" type="button" value="Show My Location">
 				</div>
 				<div class="item-control">
 					<label id="user_name">Username: </label>
